  \item The format of the output of \code{gc} has changed, to reflect
        the characteristics of the new garbage collector.  See
        \code{help(gc)} for details.
  \item Memory allocated by a C function using \code{R_alloc} will no
        longer appear in output of \code{Rprofmem}.
  \item The \code{pages} argument for Rprofmem is now ignored.
  }}

  \subsection{CHANGES TO THE C API}{
  \itemize{
  \item The \code{SETLENGTH} function has been eliminated.  It has never 
        been safe to use.
  \item The probably never-used \code{call_R} and \code{call_S} functions
        have been disabled.
  \item It is now illegal to set the \code{INTERNAL} field of a symbol
        to anything other than a primitive function (\code{BUILTINSXP}
        or \code{SPECIALSXP} type).
  \item Passing a non-vector object to a C function using \code{.C} is now
        even less advisable than before.  If compressed pointers are used,
        this will work only if the argument is recevied as a \code{void*}
        pointer, then cast to \code{uintptr_t}, then to \code{SEXP} (this
        should work when SEXP is either a compressed an uncompressed 
        pointer).
  }}

  \subsection{BUG FIXES}{
  \itemize{
  \item Cross-references between manuals in doc/manual, such as R-admin.html
        and R-exts.html,
        now go to the other manuals in this same place.  Previously (and
        in current R core versions), they went to the manuals of that
        name at cran.r-project.org, even when those manuals are not for
        the same version of R.
  }}

}


\section{CHANGES IN VERSION RELEASED 2016-10-24}{

  \subsection{INTRODUCTION}{
  \itemize{ 
  \item This is a small maintenance release, fixing a few bugs and installation
        problems.
  }}

  \subsection{INSTALLATION}{
  \itemize{
  \item When building pqR on a Mac, some Mac-specific source files
        are now compiled with the default 'gcc' (really clang on